Fix pasting to otp input on iOS #3811

--- a/authui/src/authflowv2/components/otp-input.css
+++ b/authui/src/authflowv2/components/otp-input.css
@@ -51,7 +51,8 @@
       @apply outline-none;
       @apply selection:bg-white/0;
       @apply caret-white/0;
-      @apply opacity-0;
+      /* iOS treats element with `opacity: 0` as not interactable, set text to transparent instead */
+      @apply text-transparent;
     }
   }
 
